# TXT_Reader

./: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Bookshelf.tsx  EmptyState.tsx  MemoizedParagraph.tsx  Reader.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx  ToastContainer.tsx
src/hooks/: useToast.ts
src/types/: index.ts
src/utils/: progressStore.ts  structureParser.ts
