[package]
name = "txt-reader"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
